exo: Fix use of invalid texture mailbox.

Texture must be bound before it has a valid mailbox.
https://crrev.com/d40f03 accidentally broke this by
accessing the mailbox before calling BindTexImage.

BUG=679200

Review-Url: https://codereview.chromium.org/2627753003
Cr-Commit-Position: refs/heads/master@{#443005}

Former-commit-id: 7ee8b4ecbb130b6b88443a0a2cc78c6df5dd7a29